# emlabcpp

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.md  README_8md.html  access_8h.html  access_8h.js  access_8h__incl.dot  access_8h__incl.map  access_8h__incl.md5  access_8h_source.html  access__view_8h.html  access__view_8h.js  access__view_8h__incl.map  access__view_8h__incl.md5  access__view_8h_source.html  algorithm.h  algorithm_8h.html  algorithm_8h.js  algorithm_8h__dep__incl.dot  algorithm_8h__dep__incl.map  algorithm_8h__dep__incl.md5  algorithm_8h__incl.dot  algorithm_8h__incl.map  algorithm_8h__incl.md5  algorithm_8h_source.html  aliases_8h.html  aliases_8h.js  aliases_8h__incl.map  aliases_8h__incl.md5  aliases_8h_source.html  allocator_8h.html  (+3520 more)
.github/workflows/: arch_base.yml  build.yml  cmake_tests.yml  coverity.yml  doxygen.yml  publish.yml  tests.yml
cmake/: resource.cmake  util.cmake
doc/adr/: 0001-record-architecture-decisions.md  0002-main-language-is-c-20.md  0003-standard-limitations.md  0004-dynamic-memory-shall-not-be-necessary.md  0005-exceptions-shall-not-be-necessary.md  0006-everything-should-be-in-emlabcpp-namespace.md
examples/: CMakeLists.txt  algorithm.cpp  examples.cmake  protocol.cpp
include/: algorithm.h  algorithm_detail.h  either.h  iterator.h  main.h  physical_quantity.h  quantity.h  static_circular_buffer.h  types.h  view.h  zip.h
include/emlabcpp/: access_view.h  algorithm.h  algorithm_detail.h  assert.h  bounded.h  bounded_view.h  concepts.h  convert_view.h  defer.h  derived_storage.h  either.h  enum.h  enumerate.h  error_code.h  iterator.h  main.h  match.h  min_max.h  outcome.h  physical_quantity.h  pid.h  protocol.h  quantity.h  range.h  result.h  static_circular_buffer.h  static_data.hpp  static_function.h  static_storage.h  static_vector.h  status.h  subscript_view.h  types.h  view.h  visit.h  zip.h
include/emlabcpp/algorithm/: impl.h
include/emlabcpp/allocator/: derived_storage.h  pool.h  util.h
include/emlabcpp/experimental/: binding_linked_list.h  bounded_view.h  cobs.h  decompose.h  derived_storage.h  function_view.h  linked_list.h  logging.h  matrix.h  multiplexer.h  pretty_printer.h  request_reply.h  rpc.h  simple_stream.h  static_function.h  string_buffer.h
include/emlabcpp/experimental/cfg/: base.h  handler.h  load.h  page.h  store.h
include/emlabcpp/experimental/cfg2/: handler.h  page.h
include/emlabcpp/experimental/contiguous_tree/: base.h  request_adapter.h  tree.h
include/emlabcpp/experimental/coro/: data_promise.h  memory_promise.h  owning_coroutine_handle.h  pool_promise.h  recursive.h  request_reply.h  round_robin_executor.h
include/emlabcpp/experimental/coroutine/: owning_coroutine_handle.h  request_reply.h  round_robin_executor.h
include/emlabcpp/experimental/geom/: .point.h.swp  json.h  line.h  point.h  pose.h  quaternion.h  simplex.h  triangle.h  vec_point_base.h  vector.h
include/emlabcpp/experimental/logging/: color.h  eabi_logger.h  noneabi_logger.h  severity.h  time.h  util.h
include/emlabcpp/experimental/testing/: base.h  collect.h  comm_interface.h  controller.h  controller_interface.h  controller_interface_adapter.h  convert.h  coroutine.h  error.h  executor.h  gtest.h  interface.h  json.h  parameters.h  protocol.h  reactor.h  reactor_interface.h  reactor_interface_adapter.h  record.h
include/emlabcpp/iterators/: access.h  convert.h  numeric.h  subscript.h
include/emlabcpp/memory/: bucket_resource.h  pmr.h
include/emlabcpp/pmr/: aliases.h  allocator.h  memory_resource.h  new_delete_resource.h  pool_resource.h  stack_resource.h  throw_bad_alloc.h  util.h
include/emlabcpp/protocol/: base.h  command_group.h  converter.h  decl.h  def.h  endpoint.h  error.h  handler.h  item.h  json.h  message.h  packet.h  packet_handler.h  register_handler.h  register_map.h  sequencer.h  serializer.h  streams.h  traits.h  tuple.h
include/emlabcpp/testing/: interface.h  reactor.h  record.h
include/emlabcpp/types/: base.h
include/iterators/: access.h  numeric.h
scripts/: copyright-header-run.sh  copyright-header-syntax.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+145 more)
src/experimental/: logging.cpp
src/experimental/testing/: collect.cpp  controller.cpp  controller_interface.cpp  interface.cpp  json.cpp  parameters.cpp  protocol.cpp  reactor.cpp  reactor_interface.cpp  reactor_interface_adapter.cpp  reactor_interface_adapter.h  record.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
tests/: CMakeLists.txt  access_iterator_test.cpp  algorithm_test.cpp  bounded_test.cpp  cfg2_test.cpp  cfg_test.cpp  cobs_test.cpp  concepts_test.cpp  decompose_test.cpp  either_test.cpp  function_view_test.cpp  gen_readme_cpp.py  line_test.cpp  linked_list_test.cpp  main.cpp  match_test.cpp  matrix_test.cpp  min_max_test.cpp  numeric_iterator_test.cpp  physical_quantity_test.cpp  pid_test.cpp  pmr_test.cpp  point_test.cpp  pose_test.cpp  pretty_printer_test.cpp  protocol_base_test.cpp  protocol_def_test.cpp  protocol_item_test.cpp  protocol_packet_test.cpp  protocol_register_map_test.cpp  protocol_seq_test.cpp  protocol_sophisticated_test.cpp  quaternion_test.cpp  request_reply_test.cpp  rpc_test.cpp  simplex_test.cpp  static_circular_buffer_test.cpp  static_function_test.cpp  static_vector_test.cpp  testing_awaiters_test.cpp  (+10 more)
tests/include/: operations_counter.h  point_test.h  test.h  util.h
tests/util/: operations_counter.cpp  operations_counter.h  point_test.h  test.h  util.h
